# nostratui

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix
src/: app.rs  graphics.rs  main.rs  network.rs  ui.rs
src/app/: content.rs  events.rs  input.rs  resources.rs  tests.rs
src/app/tests/: content.rs
src/graphics/: tests.rs
src/network/: image.rs  protocol.rs  tests.rs
src/ui/: chrome.rs  editor.rs  presentation.rs  tests.rs  timeline.rs
