[package]
name = "nostr-ratatui"
version = "0.1.0"
edition = "2021"
description = "A Vim-like Nostr terminal client"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = { version = "0.28", features = ["event-stream"] }
image = { version = "0.25.10", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
nostr-sdk = "0.44.1"
ratatui = "0.29"
ratatui-image = { version = "8.1.1", default-features = false, features = ["crossterm"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "sync", "time"] }
unicode-segmentation = "1.12"
unicode-width = "0.2"

[dev-dependencies]
pretty_assertions = "1.4"
